# laeser

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  storage.py
db/: connection.py  entries.py  schema.py  sources.py  tags.py
docs/: enhancements.md
docs/superpowers/plans/: 2026-03-16-laeser-implementation.md
docs/superpowers/specs/: 2026-03-16-laeser-design.md
example-files/security-now/: download_mp3s.py  download_txts.py
feeds/: downloader.py  fetcher.py  scheduler.py
routes/: audio.py  entries.py  search.py  sources.py
static/: style.css
templates/: _add_source_form.html  _entry_list.html  _entry_reader.html  _entry_tags.html  _save_button.html  _search_results.html  _sidebar.html  _source_settings.html  base.html
tests/: conftest.py  test_db_entries.py  test_db_sources.py  test_db_tags.py  test_feeds_downloader.py  test_feeds_fetcher.py  test_routes_audio.py  test_routes_entries.py  test_routes_search.py  test_routes_sources.py  test_storage.py
