[project]
name = "laeser"
version = "0.1.0"
description = "A hybrid RSS and podcast reader with local archival"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "feedparser>=6.0.11",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "python-frontmatter>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
